...
    super.initState();
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      key: Key("home_screen"),
      appBar: AppBar(
        title: const Text('Home'),
      ),
      body: Column(
        children: [
          // Header
...
                crossAxisAlignment: CrossAxisAlignment.stretch,
                children: [
                  //User profile
                  UserProfileView(
                    userDetails: viewModel.userDetails,
                  ),
                  point(viewModel),
                  //News Section Header
                  newsheader(),
                  ImageCarousel(),
                ]);
          }),
        ],
...
